cluster-1/sleep_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sleep
spec:
  containers:
  - name: sleep
    image: debian
    command:
    - sleep
    - infinity
