cluster-1/destination_rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-multicluster-cluster-2
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
spec:
  host: "*.cluster-2"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
